--- a/note-app/package.json
+++ b/note-app/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.1",
+    "node-inspect": "^1.11.6",
     "validator": "^11.1.0",
     "yargs": "^12.0.2"
+  },
+  "devDependencies": {
+    "package_name": "^1.0.2"
   }
 }
