--- a/web-server/package.json
+++ b/web-server/package.json
@@ -2,14 +2,20 @@
   "name": "web-server",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1",
-    "nodemon": "^2.0.1",
     "request": "^2.88.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
