--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.16",
